[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incident-commander-env"
version = "1.0.0"
description = "OpenEnv RL environment for SRE incident response"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.3",
    "openai==1.14.3",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]