[project]
name = "incident-commander-env"
version = "1.0.0"
description = "SRE Incident Response RL Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.3",
    "openai>=1.14.3",
    "httpx>=0.27.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
